# DZ_WEB_07

./: config.ini  main.py  pyproject.toml  queries.py
alembic/versions/: b08de4555e46_init.py
conf/: db.py
