[tool.poetry]
name = "dz-web-07"
version = "0.1.0"
description = ""
authors = ["kostjavovhc <kostjavovhc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.7.1"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
